--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
       <div class="skills-list">
         <div class="skillbar">
           <span>HTML</span>
-          <div class="bar"><div class="progress" style="width:85%"></div></div>
+          <div class="bar"><div class="progress" style="width:90%"></div></div>
         </div>
         <div class="skillbar">
           <span>CSS</span>
-          <div class="bar"><div class="progress" style="width:65%"></div></div>
+          <div class="bar"><div class="progress" style="width:85%"></div></div>
         </div>
         <div class="skillbar">
           <span>JavaScript</span>
@@ -233,94 +233,110 @@
   </section>
 
   <!-- Blog/Articles Section -->
-   <a name="blog"></a>
-    <div class="container column-container reveal-on-scroll">
-      <br>
-      <h1>Blog / Articles</h1>
-    <div class="wrapper">
-    <!-- Accordion Heading One -->
-    <div class="parent-tab">
-      <input type="radio" name="tab" id="tab-1" checked>
-      <label for="tab-1">
-        <span>How I Built My First Website</span>
-        <div class="icon"><i class="fas fa-plus"></i></div>
+   
+   <section id="blog" class="section reveal-on-scroll">
+    <div class="container column-container">
+       <a name="blog"></a>
+  <h1>Blog / Articles</h1>
+  <div class="dwrapper">
+
+    <!-- Accordion 1 -->
+    <div class="dparent">
+      <input type="radio" name="dtab" id="dtab-1" class="dinput" checked />
+      <label for="dtab-1" class="dlabel">
+        <span class="dspan">How I Built My First Website</span>
+        <div class="dicon"><i class="fas fa-plus"></i></div>
       </label>
-      <div class="contentq">
+      <div class="dcontent">
         <p>Sharing my journey from a simple HTML file to a full website.</p>
-         <p>My journey from a simple HTML file to a full-fledged website has been a transformative experience in learning and creativity.</p> 
+        <p>My journey from a simple HTML file to a full-fledged website has been a transformative experience in learning and creativity.</p>
       </div>
     </div>
 
-    <!-- Accordion Heading Two -->
-    <div class="parent-tab">
-      <input type="radio" name="tab" id="tab-2">
-      <label for="tab-2">
-        <span>About My Journey of Coading </span>
-        <div class="icon"><i class="fas fa-plus"></i></div>
+    <!-- Accordion 2 -->
+    <div class="dparent">
+      <input type="radio" name="dtab" id="dtab-2" class="dinput" />
+      <label for="dtab-2" class="dlabel">
+        <span class="dspan">About My Journey of Coading</span>
+        <div class="dicon"><i class="fas fa-plus"></i></div>
       </label>
-      <div class="contentq">
-        	<p>It began with just a blank page and basic HTML tags like `&LTh1&GT ` and `&LTp&GT`, but as my curiosity grew, I started exploring CSS to style my content and make it visually appealing. </p> 
-          <p> Gradually, I learned JavaScript to add interactivity, followed by responsive design techniques to ensure my site looked good on all devices. </p> 
-	        <p> I experimented with animations, navigation bars, contact forms, and later integrated tools like GitHub, Firebase, and Netlify to bring my project to life.</p> 
+      <div class="dcontent">
+        <p>It began with just a blank page and basic HTML tags like `&LTh1&GT` and `&LTp&GT`, but as my curiosity grew, I started exploring CSS to style my content and make it visually appealing.</p>
+        <p>Gradually, I learned JavaScript to add interactivity, followed by responsive design techniques to ensure my site looked good on all devices.</p>
+        <p>I experimented with animations, navigation bars, contact forms, and later integrated tools like GitHub, Firebase, and Netlify to bring my project to life.</p>
       </div>
     </div>
-<!-- 
-***************************************************************************
-       Dont Delete this comment area / code  it is very use full  👇🏻👇🏻👇🏻
-*************************************************************************** 
--->
 
-    <!-- Accordion Heading Three -->
-    <!-- <div class="parent-tab tab-3">
-      <input type="radio" name="tab" id="tab-3">
-      <label for="tab-3" class="tab-3">
-        <span>Accordion Heading Three</span>
-        <div class="icon"><i class="fas fa-plus"></i></div>
+    <!-- Do Not Delete 👇🏻 -->
+    <!-- 
+    <div class="dparent dtab3">
+      <input type="radio" name="dtab" id="dtab-3" class="dinput" />
+      <label for="dtab-3" class="dlabel">
+        <span class="dspan">Accordion Heading Three</span>
+        <div class="dicon"><i class="fas fa-plus"></i></div>
       </label>
-      <div class="contentq">
+      <div class="dcontent">
+        <div class="dchild">
+          <input type="checkbox" name="dsubtab" id="dtab-4" class="dinput" />
+          <label for="dtab-4" class="dlabel">
+            <span class="dspan">Sub Heading One</span>
+            <div class="dicon"><i class="fas fa-plus"></i></div>
+          </label>
+          <div class="dsubcontent">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero?</p>
+          </div>
+        </div>
+
+        <div class="dchild">
+          <input type="checkbox" name="dsubtab" id="dtab-5" class="dinput" />
+          <label for="dtab-5" class="dlabel">
+            <span class="dspan">Sub Heading Two</span>
+            <div class="dicon"><i class="fas fa-plus"></i></div>
+          </label>
+          <div class="dsubcontent">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    -->
+
+    <!-- Accordion 4 -->
+    <div class="dparent">
+      <input type="radio" name="dtab" id="dtab-6" class="dinput" />
+      <label for="dtab-6" class="dlabel">
+        <span class="dspan">More About my Journey</span>
+        <div class="dicon"><i class="fas fa-plus"></i></div>
+      </label>
+      <div class="dcontent">
+        <p>Each step came with its own challenges—broken layouts, bugs, and design hurdles—but overcoming them taught me valuable lessons about problem-solving and user experience.</p>
+        <p>Looking back, it's incredible to see how a single HTML file evolved into a dynamic, hosted website that reflects both my skills and growth as a developer.</p>
+      </div>
+    </div>
+
+  </div>
       
-        <div class="child-tab">
-          <input type="checkbox" name="sub-tab" id="tab-4">
-          <label for="tab-4">
-            <span>Sub Heading One</span>
-            <div class="icon"><i class="fas fa-plus"></i></div>
-          </label>
-          <div class="sub-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing thelit dolor. Utfacilis labore, exercitationem fuga minima a illo modi vitaerse dignissimos? Vero?</p>
-          </div>
+     <!-- <h1>Blog / Articles</h1>
+      <div class="blog-list">
+        <div class="blog-card">
+          <h2>How I Built My First Website</h2>
+          <p>Sharing my journey from a simple HTML file to a full website.</p>
+          <a class="primary-btn" id="openPopup">Read More</a>
         </div>
-       
-        <div class="child-tab">
-          <input type="checkbox" name="sub-tab" id="tab-5">
-          <label for="tab-5">
-            <span>Sub Heading Two</span>
-            <div class="icon"><i class="fas fa-plus"></i></div>
-          </label>
-          <div class="sub-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing thelit dolor. Utfacilis labore, exercitationem fuga minima a illo modi vitaerse dignissimos? Vero?</p>
-          </div>
-        </div>
-      </div>
-    </div> -->
-<!--
- **********************************************************************
- Dont Delete this comment area / code  it is very use full 👆🏻👆🏻👆🏻
-***********************************************************************
-  -->
-   <!-- Accordion Heading Four -->
-    <div class="parent-tab">
-      <input type="radio" name="tab" id="tab-6">
-      <label for="tab-6">
-        <span>More About my Journey</span>
-        <div class="icon"><i class="fas fa-plus"></i></div>
-      </label>
-      <div class="contentq">
-        <p>Each step came with its own challenges—broken layouts, bugs, and design hurdles—but overcoming them taught me valuable lessons about problem-solving and user experience.</p> 
+        <div class="overlay" id="overlay"></div>
+        <div class="popup" id="popup">
+        <p>My journey from a simple HTML file to a full-fledged website has been a transformative experience in learning and creativity.</p> 
+	<p>It began with just a blank page and basic HTML tags like `&LTh1&GT ` and `&LTp&GT`, but as my curiosity grew, I started exploring CSS to style my content and make it visually appealing. </p> 
+	<p> Gradually, I learned JavaScript to add interactivity, followed by responsive design techniques to ensure my site looked good on all devices. </p> 
+	<p> I experimented with animations, navigation bars, contact forms, and later integrated tools like GitHub, Firebase, and Netlify to bring my project to life.</p> 
+	<p>Each step came with its own challenges—broken layouts, bugs, and design hurdles—but overcoming them taught me valuable lessons about problem-solving and user experience.</p> 
 	<p>Looking back, it's incredible to see how a single HTML file evolved into a dynamic, hosted website that reflects both my skills and growth as a developer.</p>
+          <button class="close-btn" id="closePopup">Close</button>
+        </div>
       </div>
-    </div>
-  </div> </div>
-<br>
+    </div>-->
+  </section> 
+
   <!-- Contact Section -->
   <section id="contact" style="background: #1e1e1e; padding: 60px 20px;" class="reveal-on-scroll">
     <div style="max-width: 700px; margin: auto; text-align: center; color: white;" data-aos="fade-up" data-aos-duration="1200">
@@ -348,6 +364,14 @@
       </div>
     </div>
   </section>
+
+  <!-- AOS JS -->
+  
+
+
+
+
+
   <!-- yFooter Section -->
   <footer id="yFooter">
     <div class="yFooterContainer">
@@ -358,11 +382,29 @@
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </div>
+
+      <!-- <div class="yFooterSocial">
+        <a href="https://github.com/yourprofile" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:you@example.com"><i class="fas fa-envelope"></i></a>
+      </div> -->
+
       <div class="yFooterBottom">
         <p>&copy; 2025 Divyanshu Pandey. Made with 💛 | All rights reserved.</p>
       </div>
     </div>
   </footer>
+
+
+
+
+
+
+
+
+
+
+
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="scripts.js"></script>
