--- a/index.html
+++ b/index.html
@@ -100,39 +100,11 @@
   <!-- About Section -->
   <section id="about" class="section reveal-on-scroll">
     <div class="container column-container">
-      <div class="book">
-    <div class="page">
-      <div class="front cover">
-           </div>
-      <div class="back"></div>
-    </div>
-
-    <div class="page">
-      <div class="front"><div class="page-content"><h2><span id="type1" class="neon-typing"></span></h2></div></div>
-      <div class="back"><div class="page-content"><h2>my introduction</h2><h2><span id="type2" class="neon-typing"></span></h2></div></div>
-    </div>
-
-    <div class="page">
-      <div class="front"><div class="page-content"><h2>Why I Code 💻</h2><h2><span id="type3" class="neon-typing"></span></h2></div></div>
-      <div class="back"><div class="page-content"><h2>What I Know 🧠</h2><h2><span id="type4" class="neon-typing"></span></h2></div></div>
-    </div>
-
-    <div class="page">
-      <div class="front"><div class="page-content"><h2>My Vision 🚀</h2><h2><span id="type5" class="neon-typing"></span></h2></div></div>
-      <div class="back"><div class="page-content"><h2>Let's Connect! 🤝</h2><h2><span id="type6" class="neon-typing"></span></h2></div></div>
-    </div>
-
-    <div class="page">
-      <div class="front"><div class="page-content"><h2>Learning Philosophy</h2><h2><span id="type7" class="neon-typing"></span></h2></div></div>
-      <div class="back"><div class="page-content"><h2>Thank You for Being Here 🙏</h2><h2><span id="type8" class="neon-typing"></span></h2></div></div>
-    </div>
-
-    <div class="page">
-      <div class="front"></div>
-      <div class="back cover"></div>
-    </div>
-  </div>
-
+      <h1>About Me</h1>
+      <p class="info">Hi 🖐 I am a 12<sup>th</sup> standard student passionate about coding.</p>
+      <p class="info">💻 Turning ideas into reality through technology.</p>
+      <p class="info">Explore my project and let's connect!🚀</p>
+      <p class="info">Thank you 🙏</p>
     </div>
   </section>
 
