--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
           <p>A basic Building Portfolio made using HTML, JavaScript and CSS.</p>
           <a href="https://codecr4cker.github.io/html-test/" class="primary-btn" target="_blank">View Project</a>
         </div>
+	      <div class="project-card">
+          <img src="https://raw.githubusercontent.com/CodeCr4cker/cr4cker-labs/main/Img/limk.png" alt="Project 3 Screenshot">
+          <h2>Link conveter</h2>
+          <p>A basic Building link conveter made using HTML, JavaScript and CSS.</p>
+          <a href="https://codecr4cker.github.io/link-converter/" class="primary-btn" target="_blank">View Project</a>
+        </div>
       </div>
     </div>
   </section>
