--- a/app.html
+++ b/app.html
@@ -493,85 +493,6 @@ input[type="checkbox"].dinput {
 }
 
 
-    /* button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 1rem;
-      width: 100%;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-*/
-    /* .popup {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(0.8);
-      background: rgb(53, 52, 52);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      z-index: 1000;
-      color: var(--breaf);
-      width: 30rem;
-      max-width: 90vw;
-      display: none;
-      opacity: 0;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .popup.show {
-      display: block;
-      opacity: 1;
-      transform: translate(-50%, -50%) scale(1);
-    }
-
-    .overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      
-      z-index: 999;
-      display: none;
-    }
-
-    .overlay.show {
-      display: block;
-    }
-.close-btn:hover{
-  color: var(--ttt);
-  background: linear-gradient(rgb(94, 255, 0), rgb(255, 251, 0), rgb(255, 145, 0));
-}
-    .close-btn {
- border: 0.1rem solid var(--btn2);
- 
-  font-size: 2.1rem;
-  border-radius: 5rem;
-  color: var(--btn1);
-  padding: 0.6rem 1.5rem;
-  margin: 0.5rem 0;
-  cursor: pointer;
-  transition: background 0.2s;
-    }
-
-    @media (max-width: 480px) {
-      .popup {
-        padding: 15px;
-        font-size: 0.95rem;
-      }
- */
-
-    /*  button {
-        font-size: 0.95rem;
-      }
-    } */
 
 .bg-black {
   background: var(--footer-black);
@@ -645,35 +566,7 @@ img {
   margin: 0 0.5rem;
   display: inline-block;
 }
-/* footer .footer-social a {
-  margin: 0 0.5rem;
-  font-size: 2rem;
-  color: #fff;
-  transition: color 0.2s;
-}
-footer .footer-social a:hover {
-  color: var(--primary-pink);
-} */
-/* input, textarea {
-  width: 100%;
-  border-radius: 0.2rem;
-  padding: 0.9rem 1rem;
-  resize: none;
-  font-size: 1.4rem;
-  margin: 0.5rem 0;
-}
-input:focus, textarea:focus {
-  outline: 0.1rem solid var(--primary-pink);
-} */
-/* .footer-section {
-  padding: 1rem 0;
-  text-align: center;
-  color: #fff;
-}
-.footer-section pre {
-  color: #fff;
-  font-size: 1.2rem;
-} */
+
 
 /* Education Styles */
 .zcontainer {
@@ -1369,14 +1262,14 @@ header .navbar ul li a:hover, header .navbar ul li a:focus {
   </style>
 </head>
 <body>
-  <!-- Loader -->
+  <!-- Loader 
     <div class="preloader">
     <div class="loader">
       <div class="loader-outter"></div>
       <div class="loader-inner"></div>
       <span>D</span>
     </div>
-  </div>
+  </div> -->
   <!-- Back to Top Button -->
   <button onclick="window.scrollTo({top:0,behavior:'smooth'});" id="back-to-top" aria-label="Back to top"><i class="fa fa-arrow-up"></i></button>
 
