--- a/no use/app.html
+++ b/no use/app.html
@@ -1568,6 +1568,27 @@ header .navbar ul li a:hover, header .navbar ul li a:focus {
       </div>
     </div>
 
+
+
+<div class="dparent">
+      <input type="radio" name="dtab" id="dtab-2" class="dinput" />
+      <label for="dtab-2" class="dlabel">
+        <span class="dspan">Why I Code</span>
+        <div class="dicon"><i class="fas fa-plus"></i></div>
+      </label>
+      <div class="dcontent">
+        <p>  I don’t just code — I live it. </p>
+        <p> For me, coding isn’t just lines of syntax or solving bugs — it’s a creative force, a language of logic and imagination that lets me shape the digital world the way an artist shapes a canvas.</p>
+        <p>I code because I’m driven by curiosity — that burning need to understand how things work and how I can make them better. Every new challenge is a puzzle waiting to be solved, and every solved puzzle brings the satisfaction of growth.</p>
+      </div>
+</div>
+
+
+
+
+
+
+	  
   </div>
       
      <!-- <h1>Blog / Articles</h1>
